test_add/good/basic/add.ll
declare void @printInt(i32)
declare void @printString(i8*)
declare i32 @readInt()
declare i8* @readString()
declare void @error()
declare i8* @__concat(i8*, i8*)


define i32 @main() {
.entry.0:
    %0 = add i32 1, 1
    call void @printInt(i32 %0)
    ret i32 0
}

